--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -147,6 +147,7 @@ jobs:
     - name: Building recovery
       run: |
         git clone https://github.com/PitchBlackRecoveryProject/external_magisk-prebuilt -b master
+        cp -rfa external_magisk-prrbuilt/* external/magisk-prebuilt
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
         lunch ${{ github.event.inputs.MAKEFILE_NAME }}-eng && make clean && make ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
