--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -147,6 +147,9 @@ jobs:
     - name: Building recovery
       run: |
         git clone https://github.com/PitchBlackRecoveryProject/external_magisk-prebuilt -b master
+        mkdir external
+        cd external
+        mkdir magisk-prebuilt
         cp -r external_magisk-prebuilt/* /external/magisk-prebuilt
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
