--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -147,10 +147,8 @@ jobs:
     - name: Building recovery
       run: |
         git clone https://github.com/PitchBlackRecoveryProject/external_magisk-prebuilt -b master
-        mkdir external
-        cd external
         mkdir magisk-prebuilt
-        cp -r external_magisk-prebuilt/* /external/magisk-prebuilt
+        cp -rf external_magisk-prebuilt/* /external/magisk-prebuilt/
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
         lunch ${{ github.event.inputs.MAKEFILE_NAME }}-eng && make clean && make ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
