--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -149,8 +149,11 @@ jobs:
         git clone https://github.com/PitchBlackRecoveryProject/external_magisk-prebuilt -b master
         cd external
         mkdir magisk-prebuilt
+        cd magisk-prebuilt
+        mkdir external_magisk-prebuilt
         cd ..
-        cp -r external_magisk-prebuilt/* external/magisk-prebuilt
+        cd ..
+        cp -r external_magisk-prebuilt/* external/magisk-prebuilt/external_magisk-prebuilt
         
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
