--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -151,7 +151,7 @@ jobs:
         mkdir magisk-prebuilt
         cd ..
         cp -r external_magisk-prebuilt/* external/magisk-prebuilt
-        rm external_magisk-prebuilt
+        rm -rf external_magisk-prebuilt
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
         lunch ${{ github.event.inputs.MAKEFILE_NAME }}-eng && make clean && make ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
